# ssrf-lite

./: .gitignore  Makefile  README.md  generate_ssrf_codeplug.py  generate_ssrf_schema.py  generate_ssrf_site.py  pyproject.toml
.github/workflows/: pages.yml
site/: app.js  codeplug.json  index.html  robots.txt  sitemap.xml  style.css
ssrf/_schema/: ssrf-lite-0.5.3.schema.json
