[project]
name = "ssrf-lite"
version = "0.5.3"
description = "SSRF-Lite: a simplified, YAML-based spectrum resource format with Pydantic models, JSON Schema, and a reference data library"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
authors = [
    { name = "Eric Muehlstein", email = "muehlbucks@gmail.com" },
]
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.6,<3",
]

[project.urls]
Repository = "https://github.com/Chicago-Offline/ssrf-lite"

[dependency-groups]
dev = [
    "jsonschema>=4.20",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ssrf"]
